feat: add sprites for cosmic dassel, deidre, kaniel contis